@@ -1,8 +1,9 @@
 postgresql-common (63) unstable; urgency=low
 
-  *
+  * t/090_multicluster.t, t/100_upgrade_scripts.t: Replace hardcoded '8.1'
+    versions in test data with appropriate $MAJORS values.
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 18 Sep 2006 09:32:32 +0200
+ -- Martin Pitt <mpitt@debian.org>  Tue, 26 Sep 2006 00:19:13 +0200
 
 postgresql-common (62) unstable; urgency=low
 
